// Vitest Snapshot v1

exports[`<Header/> > should render authenticated header 1`] = `
<div>
  <div>
    <div
      class="navbar bg-base-100 sm:mb-16"
    >
      <div
        class="flex-1 text-primary"
      >
        <div
          class="btn btn-ghost normal-case text-xl"
          to="/"
        >
          <img
            alt="logo"
            src="/src/components/Header/logo.webp"
          />
        </div>
      </div>
      <div
        class="flex-none gap-2"
      >
        <ul
          class="menu menu-horizontal p-0"
        >
          <li>
            <div
              data-testid="accountLink"
              to="/account"
            >
              My Account
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Header/> > should render unauthenticated header 1`] = `
<div>
  <div>
    <div
      class="navbar bg-base-100 sm:mb-16"
    >
      <div
        class="flex-1 text-primary"
      >
        <div
          class="btn btn-ghost normal-case text-xl"
          to="/"
        >
          <img
            alt="logo"
            src="/src/components/Header/logo.webp"
          />
        </div>
      </div>
      <div
        class="flex-none gap-2"
      >
        <ul
          class="menu menu-horizontal p-0"
        >
          <li>
            <div
              data-testid="loginLink"
              to="/signin"
            >
              Get Started
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
